--- a/s/WebContent/partials/scoreMonitor.html
+++ b/s/WebContent/partials/scoreMonitor.html
@@ -104,7 +104,7 @@
 
 									<th width="16%">不到棄權</th>
 									
-									<th width="16%">重覆使用圖片</th>
+									<th width="16%">未使用所有圖片</th>
 								</tr>
 							</thead>
 						</table>
