add winner label in score monitor

--- a/s/WebContent/partials/scoreMonitor.html
+++ b/s/WebContent/partials/scoreMonitor.html
@@ -23,17 +23,18 @@
 	</table>
 
 	<div ng-show="selectedContestGroup!=null">
-		<table class="table table-striped"  ng-init="predicate = 'contestOrder'">
+		<table class="table table-striped"
+			ng-init="predicate = 'contestOrder'">
 			<thead>
 				<tr>
-				
+
 					<th><a href=""
 						ng-click="predicate = 'finalRank';
 					reverse=!reverse">名次</a></th>
 					<th><a href=""
 						ng-click="predicate = 'contestOrder';
 					reverse=!reverse">出場順序</a></th>
-					
+
 					<th><a href=""
 						ng-click="predicate = 'students[0].chineseLastName';
 					reverse=!reverse">學生姓名</a></th>
@@ -69,12 +70,12 @@
 					<th valign="top" height="100%"
 						ng-repeat="contestorScore in contestors[0].contestorScores | getOnlyRoleFilter:'[1,4]' | orderBy: ['judge.role.idrole','judge.idjudge']:true">{{contestorScore.judge.staff.chineseLastName}}{{contestorScore.judge.staff.chineseFirstName}}-{{contestorScore.judge.role.name}}
 						<table border="1" width="120px">
-								<tr>
-									<th width="33%" valign="top"
-										ng-repeat="scoreRuleItem in selectedContestGroup.scoreRule.scoreRuleItems | orderBy:'priority'">{{scoreRuleItem.name}}
-										{{scoreRuleItem.weight}} %</th>
-								</tr>
-							</table>
+							<tr>
+								<th width="33%" valign="top"
+									ng-repeat="scoreRuleItem in selectedContestGroup.scoreRule.scoreRuleItems | orderBy:'priority'">{{scoreRuleItem.name}}
+									{{scoreRuleItem.weight}} %</th>
+							</tr>
+						</table>
 					</th>
 					<th
 						ng-repeat="contestorScore in contestors[0].contestorScores | getOnlyRoleFilter:'[2]' | orderBy: 'judge.idjudge'">
@@ -91,7 +92,7 @@
 					<th
 						ng-repeat="contestorScore in contestors[0].contestorScores | getOnlyRoleFilter:'[4]' | orderBy: 'judge.idjudge'">
 						{{contestorScore.judge.staff.chineseLastName}}{{contestorScore.judge.staff.chineseFirstName}}-{{contestorScore.judge.role.name}}<br>
-						<table  border="1">
+						<table border="1">
 							<thead>
 								<tr>
 									<th width="16%">點名扣分</th>
@@ -103,7 +104,7 @@
 									<th width="16%">家長提詞 -- 手勢</th>
 
 									<th width="16%">不到棄權</th>
-									
+
 									<th width="16%">未使用所有圖片</th>
 								</tr>
 							</thead>
@@ -125,8 +126,11 @@
 			<tbody>
 				<tr ng-class="{warning: record.abstained}"
 					ng-repeat="record in contestors | orderBy:predicate:reverse">
-					
-					<td>{{record.finalRank}}</td>
+
+					<td><span ng-class="{'label label-success': record.winner}">{{record.finalRank}}</span>
+						<br>
+					<br> <span ng-show="record.winner"
+						ng-class="{'label label-success': record.winner}">Winner</span></td>
 					<td>{{record.contestOrder}}</td>
 					<td><span ng-repeat="student in record.students">{{student.chineseLastName}}{{student.chineseFirstName}}
 							{{student.englishFirstName}} {{student.englishLastName}} </span></td>
@@ -137,7 +141,6 @@
 							</h4>
 						</div>
 						<div ng-hide="record.abstained">
-
 							<h4>
 								<span class="label label-success">到</span>
 							</h4>
