add staff selector filter in Contest Group page

--- a/s/WebContent/partials/allContests.html
+++ b/s/WebContent/partials/allContests.html
@@ -24,7 +24,11 @@
 						</tr>
 						<tr>
 							<td><label>Contest Group:</label></td>
-							<td><textarea type="text" placeholder="Contest Group"
+							<td><textarea type="text" placeholder="<Group1 Type>-<Group1 Name>-<Time Limit Name>,...|<Judge1(Chief)>,<Judge2>,...<Last Judge(Timer)|<Location Name>|<Score Type(去頭截尾|通通都要)>
+演講-第一組-45秒至2分鐘,演講-表演組-45秒至2分鐘,演講-第三組-45秒至2分鐘,演講-第四組-1分30秒至3分鐘,演講-第五組-1分30秒至3分鐘,演講-第六組-1分30秒至3分鐘|楊維琍,秦淑芬,楊芳宜,林麗文,張莉莉,侯珞怡,黃靜慧,仲芳琦|八年級/高年級教室|去頭截尾
+朗讀-第九組-30秒至2分鐘,演講-第二組-45秒至2分鐘,朗讀-第十組-45秒至3分鐘,朗讀-第十一組-45秒至3分鐘|陳翎玥,洪文君,洪宣淇,尹昌舜,陳康妮,黃玫瑛,傅霈蒂,Gregg Ong|pre-CFL/CFLII 教室|去頭截尾
+看圖說故事-第七組-1分30秒至3分鐘|陳翎玥,吳宣萱,何玉梅,馬文豪,陳康妮,陳臻,馮玫華,Gregg Ong|八年級/高年級教室|去頭截尾
+看圖說故事-第八組-1分30秒至3分鐘|楊維琍,吳宣萱,洪宣淇,劉怡均,鄭淑儀,楊舒媛,陳臻,Gregg Ong|八年級/高年級教室|去頭截尾"
 									ng-model="recordToUpdate.contestGroups"
 									value="{{recordToUpdate.contestGroup}}" rows="10" cols="70%"></textarea></td>
 						</tr>
