add new detail note for Penalty Chief and Story Telling adding Contestor

--- a/s/WebContent/partials/allContestGroups.html
+++ b/s/WebContent/partials/allContestGroups.html
@@ -71,10 +71,18 @@ student_name	speech_title
 student_name	speech_title
 student_name	speech_title
 
-For adding:
+For adding regular:
 student_name|student_english_name	speech_title
 student_name|student_english_name	speech_title
-student_name|student_english_name	speech_title"
+student_name|student_english_name	speech_title
+
+For 看圖說故事:
+student_name|student_english_name
+student_name|student_english_name
+student_name|student_english_name
+
+student_name|student_english_name
+student_name|student_english_name"
 									ng-model="recordToUpdate.contestors"
 									value="{{recordToUpdate.contestors}}" rows="15" cols="70%"></textarea></td>
 						</tr>
