--- a/s/WebContent/css/app.css
+++ b/s/WebContent/css/app.css
@@ -38,3 +38,9 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+.blink {
+     //color: #FFF !important;
+color: RED; !important;
+     //background: #FC79CE; !important;
+background: YELLOW; !important;
+}
