achen - fix Alert Time Threshold

--- a/s/WebContent/partials/judgeScoring.html
+++ b/s/WebContent/partials/judgeScoring.html
@@ -722,7 +722,7 @@
 
 			<table ng-switch-when="2" class="table">
 			<div id="alertMessage" ng-show="speechStopwatch.data.isAlertRaised" align="center">
-			<h2>Time Alert</h2>
+			<h2>{{alertTimeThreshold}} Seconds Alert</h2>
 			</div>
 				<tbody>
 					<tr>
